# article-recommendation

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  crawler.yml  recommender.yml
article_recs/: application.py  candidate_generator.py  content_extractor.py  context.py  crawler.py  recommender.py  web.py
article_recs/content_extraction/: scraper.py
article_recs/db/: db.py
article_recs/recommenders/: most_popular.py
client/: api.py  pyproject.toml
core/: Dockerfile  pyproject.toml
core/article_recs/: application.py  context.py  crawler_reddit.py  recommender.py  web.py
core/article_recs/content_extraction/: paywall.py
core/article_recs/db/: db.py  models.py
core/article_recs/recommenders/: most_popular.py  scorer.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ArticleList.tsx  index.css
modules/: api.py
modules/content_summarizer/: Dockerfile  api.py  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml  summarizer.py
modules/content_summarizer/content_summarizer/: main.py  notebook.ipynb  summarizer.py
modules/similarity_scorer/: Dockerfile  docker-compose.yml  main.py  notebook.ipynb  pyproject.toml
modules/similarity_scorer/similarity_scorer/: main.py
tests/: test_article_recs.py
