[tool.poetry]
name = "article_recommendation_client"
version = "0.1.0"
description = ""
authors = ["dimafeng <dimafeng@gmail.com>"]
readme = "README.md"
packages = [{include = "article_recommendation_client"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
