[tool.poetry]
name = "content-summarizer"
version = "0.1.0"
description = ""
authors = ["dimafeng <dimafeng@gmail.com>"]
readme = "README.md"
packages = [{include = "content_summarizer"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.28.1"
article_recommendation_client = { git = "https://github.com/dimafeng/article-recommendation.git", subdirectory = "client" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
